[gd_scene load_steps=5 format=2]

[ext_resource path="res://Testing/gamecontroller/GameController.gd" type="Script" id=1]
[ext_resource path="res://Testing/gamecontroller/LoadingScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Testing/gamecontroller/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Testing/gamecontroller/GameOverScreen.tscn" type="PackedScene" id=4]

[node name="GameController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )
first_level = "res://Testing/Level.tscn"
main_menu_scene = "res://Testing/MainMenu.tscn"
player_status = "res://Testing/PlayerStatus/PlayerStatus.tscn"

[node name="Menu" type="CanvasLayer" parent="."]
layer = 128

[node name="PauseMenu" parent="Menu" instance=ExtResource( 3 )]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0

[node name="GameOverScreen" parent="Menu" instance=ExtResource( 4 )]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0

[node name="LoadingScreen" parent="Menu" instance=ExtResource( 2 )]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
